# audio

./: .env.sample  .gitignore  Cargo.toml  Makefile  README.md  build.rs  run_with_env
androidapp/: .gitignore  Makefile
androidapp/app/: build.gradle.kts
androidapp/app/src/main/: AndroidManifest.xml
androidapp/app/src/main/java/com/example/androidapp/: AudioGrpcForegroundService.kt  MainActivity.kt
androidapp/app/src/main/res/layout/: activity_main.xml
androidapp/app/src/main/res/values/: strings.xml  themes.xml
androidapp/app/src/main/res/values-night/: themes.xml
migrations/: 20260429032349_init.sql
notebooks/: pyanote.ipynb  whisper.ipynb
proto/: audio.proto
server/: Cargo.toml  Makefile  build.rs
server/pyworkers/: main.py  pyproject.toml
server/pyworkers/workers/: common.py  db.py  diariser.py  transcriber.py
server/src/: audioprocessor.rs  main.rs  sql.rs  vad.rs
src/: audioprocessor.rs  main.rs
