[package]
name = "audio-common"
version = "0.1.0"
edition = "2024"

[lib]
name = "audio_common"
crate-type = ["cdylib"]

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
tokio = { version = "1.52.1", features = ["full"] }

prost = "0.14.3"
tonic = "0.14.5"
tonic-prost = "0.14.5"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "uuid"] }
uuid = { version = "1.23.1", features = ["v4"] }
pyo3 = { version = "0.28.3", features = ["extension-module"] }

[build-dependencies]
tonic-prost-build = "0.14.5"
